--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'mapbox-gl/dist/mapbox-gl.css';
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
